src/test/resources/de/uni_luebeck/isp/tessla/interpreter/tests/errors/undeclared-inputs.tessla
in x: Events[Int]
out x